# mk-burger-fast

./: .dockerignore  .env-sample  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
app/: cli.py  conf.py  db.py  main.py  models.py  routers.py  schemas.py  service.py
app/cli/: __init__.py  bread.py  meat.py  optional.py  status.py  tables.py
app/routers/: __init__.py  base.py  burgers.py  ingredients_status.py
migrations/: env.py
migrations/versions/: 359a1f7d534f_add_created_at_updated_at.py  68838629b63f_create_tables.py  a96db4c2213e_create_models.py  afa31b4d324f_create_tables.py  cd9bed28eb9b_create_first_table.py
nginx/: default.conf
postgres/: init_db_data.sql
tests/: conftest.py  test_base.py  test_models.py  test_routers.py  test_schemas.py  test_services.py  tests_schemas.py
tests/cli/: conftest.py  test_bread.py  test_meat.py  test_optional.py  test_status.py
tests/models/: test_bread.py  test_burger.py  test_meat.py  test_optional.py  test_status.py
tests/routers/: test_base.py  test_burger.py  test_ingredients_status.py  test_status.py
